...
    setValue(currentValue);
  }, [currentValue]);

  return (
    <View>
      <CodeField
        testID="code-input-field"
        ref={ref}
        {...props}
        value={currentValue}
        onChangeText={(text) => {
          setValue(text);
          onValueChange(text);
...
