...
    }
  };

  return (
    <VStack className="mt-8 gap-1">
      <Text size="heading" weight="bold">
        Welcome Jon Smith
      </Text>
      <Text size="bodyS" weight="medium">
        {getCustomGreeting()}
      </Text>
    </VStack>
  );
...
