appId: com.nyplex.taskwan.preview
tags:
  - auth
---
- launchApp:
    clearState: true
- assertVisible: Get Started
- tapOn: Get Started
- assertVisible:
    id: login-footer
- tapOn:
    id: login-footer-signup
- assertVisible: Email
- assertVisible: Username
- tapOn: Email
- assertVisible:
    text: Register
    enabled: false
- inputText: maestro@e2e.com
- tapOn: Username
- inputRandomPersonName
- hideKeyboard
- assertVisible:
    text: Register
    enabled: true
- tapOn: Register
- assertVisible: Verify Account
- tapOn:
    id: code-input-field
- inputText: '12345'
- inputText: '6'
- extendedWaitUntil:
    visible: Welcome Jon Smith
    timeout: 60000
- stopApp
